--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -147,24 +147,51 @@ rgba(0, 0, 0, .7): Define a cor da sombra. Nesse caso, é uma sombra preta com u
     height: 560px;
     background-size: cover;
     background-image: url("/images/woman-code.png");
-    background-attachment: fixed;/*A propriedade background-attachment no CSS é usada para definir se uma imagem de fundo deve rolar junto com o conteúdo da página ou permanecer fixa em sua posição enquanto o conteúdo é rolado. Quando você define background-attachment: fixed;, a imagem de fundo permanece fixa em sua posição em relação à janela de visualização do navegador. Isso significa que, à medida que o usuário rola o conteúdo da página, a imagem de fundo permanece no mesmo lugar na janela do navegador, criando um efeito de paralaxe.*/
+    background-attachment: fixed;
+    /*A propriedade background-attachment no CSS é usada para definir se uma imagem de fundo deve rolar junto com o conteúdo da página ou permanecer fixa em sua posição enquanto o conteúdo é rolado. Quando você define background-attachment: fixed;, a imagem de fundo permanece fixa em sua posição em relação à janela de visualização do navegador. Isso significa que, à medida que o usuário rola o conteúdo da página, a imagem de fundo permanece no mesmo lugar na janela do navegador, criando um efeito de paralaxe.*/
     border-top: 1px solid #33A8DB80;
     border-bottom: 1px solid #33A8DB80;
     padding: 200px;
 }
 
-#transform-world p {
-    font-weight: 900;/*A declaração font-weight: 900; no CSS é usada para definir o peso da fonte de um elemento como "extra bold" ou "ultra negrito". */
+#transform-world h2 {
+    color: white;
+    font-weight: 900;
+    /*A declaração font-weight: 900; no CSS é usada para definir o peso da fonte de um elemento como "extra bold" ou "ultra negrito". */
     font-size: 2.5rem;
     text-transform: lowercase;
-    max-width: 250px; /*A declaração max-width: 250px; no CSS é usada para definir a largura máxima de um elemento. Nesse caso, o valor 250px especifica que a largura máxima do elemento alvo será de 250 pixels. Essa propriedade é útil quando você deseja garantir que um elemento não ultrapasse um determinado tamanho, mesmo que o conteúdo dentro dele seja maior. Se o conteúdo dentro do elemento exceder a largura máxima especificada, o elemento se ajustará automaticamente para que seu conteúdo seja visível, mas não ultrapasse o limite estabelecido.*/
-    text-shadow: 3px 2px #33A8DB; 
+    max-width: 250px;
+    /*A declaração max-width: 250px; no CSS é usada para definir a largura máxima de um elemento. Nesse caso, o valor 250px especifica que a largura máxima do elemento alvo será de 250 pixels. Essa propriedade é útil quando você deseja garantir que um elemento não ultrapasse um determinado tamanho, mesmo que o conteúdo dentro dele seja maior. Se o conteúdo dentro do elemento exceder a largura máxima especificada, o elemento se ajustará automaticamente para que seu conteúdo seja visível, mas não ultrapasse o limite estabelecido.*/
+    text-shadow: 3px 2px #33A8DB;
+    /*A declaração text-shadow no CSS é usada para adicionar sombras ao texto. Aqui está uma explicação dos valores utilizados na sua declaração text-shadow:
+    3px: Especifica o deslocamento horizontal da sombra em relação ao texto. Nesse caso, a sombra será deslocada 3 pixels para a direita do texto.
+    2px: Especifica o deslocamento vertical da sombra em relação ao texto. Nesse caso, a sombra será deslocada 2 pixels para baixo do texto.
+    #33A8DB: Define a cor da sombra. Nesse caso, é uma sombra de cor #33A8DB.*/
+}
 
+#professional-challenges {
+    text-align: center;
+    width: 800px;
+}
 
-
-
+#professional-challenges img {
+    margin: 32px 0;
 }
 
 
+footer {
+    padding: 60px 0;
+    text-align: center;
+    background-image: linear-gradient(rgba(50, 168, 219, .0), rgba(50, 168, 219, .2));
+    border-top: 1px solid #33A8DB80;
+}
 
-  
+footer .dio-logo {
+    width: 300px;
+}
+
+footer a {
+    color: #33A8DB;
+    font-weight: bold;
+    text-decoration: none;
+  }
